--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
 CFLAGS = -Wall -Wextra -Werror -pedantic -std=c99
-CPPFLAGS = -Iraytracer/includes -D_POSIX_C_SOURCE=200809L
+CPPFLAGS = -Iincludes -D_POSIX_C_SOURCE=200809L
 
-vpath %.c raytracer
-OBJS = raytracer.o
+vpath %.c src
+OBJS = rt.o
 BIN = rt
 
 
@@ -11,7 +11,7 @@ all: $(BIN)
 all: CFLAGS += -O2
 
 debug: $(BIN)
-debug: CFLAGS += -g -fstack-protector-all -fsanitize=address
+debug: CFLAGS += -ggdb -fstack-protector-all -fsanitize=address
 debug: LDLIBS += -lasan
 
 $(BIN): $(OBJS)
