--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -1,6 +1,7 @@
 CC=gcc
 CFLAGS = -Wall -Wextra -Werror -pedantic -std=c99
 CPPFLAGS = -Iincludes -D_POSIX_C_SOURCE=200809L
+LDLIBS = -lm
 
 vpath %.c src
 OBJS = rt.o screen.o vect.o poly_solve.o svati.o
