Makefile: use -iquote instead of -I

--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 CFLAGS = -Wall -Wextra -Werror -pedantic -std=c99
-CPPFLAGS = -Iincludes -D_POSIX_C_SOURCE=200809L
+CPPFLAGS = -iquote includes -D_POSIX_C_SOURCE=200809L
 
 vpath %.c src
 OBJS = rt.o screen.o vect.o poly_solve.o svati.o trian.o
