--- a/raytracer/Makefile
+++ b/raytracer/Makefile
@@ -1,9 +1,11 @@
 CC=gcc
 CFLAGS = -Wall -Wextra -Werror -pedantic -std=c99
-CPPFLAGS = -iquote includes -D_POSIX_C_SOURCE=200809L
+CPPFLAGS = -MMD -iquote includes -D_POSIX_C_SOURCE=200809L
 
 vpath %.c src
 OBJS = rt.o screen.o vect.o poly_solve.o svati.o trian.o ppm.o color.o render.o
+DEPS = $(OBJS:.o=.d)
+
 BIN = rt
 
 all: $(BIN)
@@ -18,6 +20,8 @@ debug: $(BIN)
 
 $(BIN): LDLIBS += -lm
 $(BIN): $(OBJS)
+
+-include $(DEPS)
 
 clean:
 	rm -f $(BIN) $(OBJS)
